# fastVEP

./: .gitignore  CHANGELOG.md  CONSEQUENCES_DETAILED.md  Cargo.toml  PRESENTATION.md  README.md
analysis/acmg_benchmark/: METHODS.md
analysis/acmg_benchmark/real_data/: 01_extract_clinvar_2star.py  03_evaluate_concordance.py  04_build_md_review_table.py  README.md  generate_figures.py
benchmarks/: README.md  check_urls.sh  download_data.sh
crates/fastvep-annotate/: Cargo.toml
crates/fastvep-annotate/src/: lib.rs
crates/fastvep-cache/src/: fasta.rs  gff.rs  regulatory.rs
crates/fastvep-classification/src/: config.rs  sa_extract.rs
crates/fastvep-classification/src/criteria/: benign_strong.rs  benign_supporting.rs  pathogenic_moderate.rs  pvs1.rs
crates/fastvep-cli/src/: main.rs  pipeline.rs
crates/fastvep-cli/tests/: sa_build_oga.rs
crates/fastvep-io/: Cargo.toml
crates/fastvep-io/src/: geneset.rs  lib.rs  output.rs  qc.rs  variant.rs  vcf.rs
crates/fastvep-io/tests/: vep_compat.rs
crates/fastvep-loftee/: Cargo.toml
crates/fastvep-loftee/src/: conservation.rs  filters.rs  lib.rs  maxentscan.rs  motifs.rs  splice.rs  svm.rs
crates/fastvep-sa/examples/: bench_sa_reader.rs  probe_sa.rs
crates/fastvep-sa/src/: bloom.rs  chunk.rs  common.rs  custom.rs  index.rs  interval.rs  kmer16.rs  lib.rs  reader.rs  reader_v2.rs  var32.rs  writer_v2.rs
crates/fastvep-sa/src/sources/: omim.rs
crates/fastvep-sa/tests/: issue_37_contig_naming.rs  issue_37_v2_cache_coherence.rs
crates/fastvep-web/src/: errors.rs  handlers.rs  main.rs
data/benchmark/: RUN_VERSIONS.md  STATUS.md  run_full_benchmark.sh
data/benchmark/output_v1/: README.md
data/benchmark/output_v6/: MD_REVIEW.md  README.md  concordance_by_chrom.csv  concordance_by_consequence.csv  concordance_matrix.csv  concordance_summary.txt  criterion_firing_rates.csv  discrepancies.tsv  discrepancies_for_md_review.tsv  rule_distribution.csv
data/benchmark/output_v8/: MD_REVIEW.md  README.md  concordance_by_chrom.csv  concordance_by_consequence.csv  concordance_matrix.csv  concordance_summary.txt  criterion_firing_rates.csv  discrepancies.tsv  discrepancies_for_md_review.tsv  opposite_direction.fastvep.vcf  opposite_direction.vcf  rule_distribution.csv
data/benchmark/sa_sources/: build_gnomad_per_chrom.sh  build_spliceai_phylop.sh  clingen_gdv_to_oga.py  download_sa_sources.sh  extract_spliceai_phylop_from_gnomad.py
docs/: ACMG.md  ACMG_SETUP.md  index.html
