[workspace]
members = [
    "crates/fastvep-core",
    "crates/fastvep-genome",
    "crates/fastvep-cache",
    "crates/fastvep-consequence",
    "crates/fastvep-hgvs",
    "crates/fastvep-io",
    "crates/fastvep-filter",
    "crates/fastvep-sa",
    "crates/fastvep-annotate",
    "crates/fastvep-classification",
    "crates/fastvep-loftee",
    "crates/fastvep-cli",
    "crates/fastvep-web",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "A high-performance variant effect predictor with clinical database integration, written in Rust"

[workspace.dependencies]
# Internal crates
fastvep-core = { path = "crates/fastvep-core" }
fastvep-genome = { path = "crates/fastvep-genome" }
fastvep-cache = { path = "crates/fastvep-cache" }
fastvep-consequence = { path = "crates/fastvep-consequence" }
fastvep-hgvs = { path = "crates/fastvep-hgvs" }
fastvep-io = { path = "crates/fastvep-io" }
fastvep-filter = { path = "crates/fastvep-filter" }
fastvep-sa = { path = "crates/fastvep-sa" }
fastvep-annotate = { path = "crates/fastvep-annotate" }
fastvep-classification = { path = "crates/fastvep-classification" }
fastvep-loftee = { path = "crates/fastvep-loftee" }

# External crates
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "wrap_help"] }
rayon = "1.10"
crossbeam = "0.8"
flate2 = "1"
memmap2 = "0.9"
log = "0.4"
env_logger = "0.11"
noodles-bgzf = "0.46"
noodles-core = "0.19"
noodles-tabix = "0.61"
noodles-csi = "0.55"
bincode = "1"
zstd = "0.13"
zip = { version = "2", default-features = false, features = ["deflate"] }
lru = "0.12"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
