[package]
name = "fastvep-io"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "VCF parsing (incl. SVs), multi-sample genotype parsing, output formatting for fastVEP"

[dependencies]
fastvep-core = { workspace = true }
fastvep-genome = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
log = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
